[package]
name = "rename"
version = "0.1.0"
authors = ["Sreela <sreela.das@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
clap = { version = "4.4.2", features = ["derive"] }
getch = "0.3.1"
glob = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
